# lpecprep

./: CMakeLists.txt  README.md  lpecprep.pc.cmake  version.h.cmake
lpecprep/: analysis.cpp  analysis.h  analysis.ui  curvefit.cpp  curvefit.h  fftutil.cpp  fftutil.h  freq_domain.cpp  freq_domain.h  linear_regress.cpp  linear_regress.h  main.cpp  main_tester.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pecwindow.cpp  pecwindow.h  pecwindow.ui  phdconvert.cpp  phdconvert.h  resources.qrc  stats.cpp  stats.h  structs.h
